--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --link-color: #000000;
     --link-hover-color: #5b5a5a;
     --solid-border:6px solid #162e6a;
+    --icon-fill-color:#3c3c43;
 }
 
 [data-theme="dark"] {
@@ -27,6 +28,7 @@
     --img-github-link:"./images/github_d.png";
     --img-githubpage-link:"./images/githubpage_d.png";
     --solid-border:6px solid #0062d2;
+    --icon-fill-color:#f0f6fc;
 }
 
 body {
